# lrgwn

./: .gitignore  README.md  main.py  peptides-func.md  pyproject.toml
configs/: peptides-func-lrgwn.yaml  peptides-func-s2gnn.yaml  peptides-func.yaml
configs/dataset/: peptides-func.yaml
configs/logging/: default.yaml
configs/model/: lrgwn-gps.yaml
configs/task/: multilabel.yaml
configs/train/: default.yaml
lrgwn/: config.py  layer.py  model.py  transforms.py  utils.py
tests/: eigen.py
